# PyWordSegment

./: .gitignore  Cargo.toml  README.md  cortex.yaml  pyproject.toml  test.py
.github/workflows/: build.yml  deploy.yml
pywordsegment/: __init__.py  pywordsegment.pyi
scripts/: bigrams_downloader.py  serializer.py  unigrams_downloader.py
src/: lib.rs
tests/: test_pywordsegment.py
