[package]
name = "pywordsegment"
version = "0.1.4"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "Concatenated-word segmentation Python library written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordsegment"
homepage = "https://github.com/intsights/pywordsegment"
license = "MIT"
keywords = ["word", "segment", "rust", "pyo3"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[lib]
name = "pywordsegment"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
bincode = "1"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
smartstring = "0.2"
once_cell = "1.8"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
