[package]
name = "pywordsegment"
version = "0.3.0"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "Concatenated-word segmentation Python library written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordsegment"
homepage = "https://github.com/intsights/pywordsegment"
license = "MIT"
keywords = [
    "word",
    "segment",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]

[lib]
name = "pywordsegment"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
rmp-serde = "1"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
