[package]
name = "pywordsegment"
version = "0.4.3"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "Concatenated-word segmentation Python library written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordsegment"
homepage = "https://github.com/intsights/pywordsegment"
license = "MIT"
keywords = [
    "word",
    "segment",
    "rust",
    "pyo3",
]

[package.metadata.maturin]

[lib]
name = "pywordsegment"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
rmp-serde = "1"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
