[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "Cargo.toml",
    "pyproject.toml",
    "pywordsegment/*.gz",
    "pywordsegment/*.py",
    "pywordsegment/*.pyi",
    "src/*",
]

[tool.poetry]
name = "pywordsegment"
version = "0.3.0"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "Concatenated-word segmentation Python library written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordsegment"
homepage = "https://github.com/intsights/pywordsegment"
license = "MIT"
keywords = [
    "word",
    "segment",
    "rust",
    "pyo3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Rust",
]
packages = [
    { include = "pywordsegment" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
